fix: toc spacing

--- a/src/assets/css/7-components/_toc.scss
+++ b/src/assets/css/7-components/_toc.scss
@@ -9,6 +9,7 @@ nav.toc {
     li {
         display: block;
         counter-increment: index;
+        padding: var(--spacing-xx-small) 0;
 
         &:before {
             font-size: .875rem;
